--- a/porfolio/template/configestilos.html
+++ b/porfolio/template/configestilos.html
@@ -60,6 +60,51 @@
             </div>
         </footer>
     </div>
+    <div class="conteiner-main-movil">
+        <main>
+            <div class="titulo-porfolio" id="titulo">
+                Cambia el estilo del porfolio
+            </div>
+            <div class="conteiner-estilos" id="conconteiner-estilos">
+                <div class="columnas">
+                    <a href="/eyes/" class="unidad-estilos" id="ojos">
+                        <img src='{% static "imagenes/eyes/mascotao.png" %}' alt="" style="width: 100%; height: auto;">
+                    </a>
+                    <a href="cuartointento/htmls/index.html" class="unidad-estilos" id="porfolio2">
+                        <img src="" alt="" style="width: 100%; height: auto;">
+                    </a>
+                    <a href="/space/" class="unidad-estilos" id="space">
+                        <img src='{% static "imagenes/space/alienlgo.png" %}' alt="" style="width: 100%; height: auto;">
+                    </a>
+                    <div class="unidad-estilos NoIniciada" id="proximamente4">
+                        <p>proximamente</p>
+                    </div>
+                </div>
+                <div class="columnas">
+                    <div class="unidad-estilos NoIniciada" id="proximamente5">
+                        <p>proximamente</p>
+                    </div>
+                    <div class="unidad-estilos NoIniciada" id="proximamente6">
+                        <p>proximamente</p>
+                    </div>
+                    <div class="unidad-estilos NoIniciada" id="proximamente7">
+                        <p>proximamente</p>
+                    </div>
+                    <div class="unidad-estilos NoIniciada" id="proximamente8">
+                        <p>proximamente</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+
+        <footer>
+            <div class="conteiner-contacto" id="contacto">
+                <p> Github: horacio.a </p>
+                <p> Linkedin: Horacio Albornoz </p>
+                <p> Cv: click aqui</p>
+            </div>
+        </footer>
+    </div>
 </body>
 <script src='{% static "js/hub.js" %}'></script>
 
