--- a/porfolio/template/configestilos.html
+++ b/porfolio/template/configestilos.html
@@ -29,7 +29,8 @@
                         <img src="" alt="" style="width: 100%; height: auto;">
                     </a>
                     <a href="/space/" class="unidad-estilos" id="space">
-                        <img src='{% static "imagenes/space/alienlogo.png" %}' alt="" style="width: 100%; height: auto;">
+                        <img src='{% static "imagenes/space/alienlogo.png" %}' alt=""
+                            style="width: 100%; height: auto;">
                     </a>
                     <div class="unidad-estilos NoIniciada" id="proximamente4">
                         <p>proximamente</p>
@@ -60,6 +61,10 @@
             </div>
         </footer>
     </div>
+
+
+
+
     <div class="conteiner-main-movil">
         <main>
             <div class="titulo-porfolio" id="titulo">
@@ -68,42 +73,52 @@
             <div class="conteiner-estilos" id="conconteiner-estilos">
                 <div class="columnas">
                     <a href="/eyes/" class="unidad-estilos" id="ojos">
-                        <img src='{% static "imagenes/eyes/mascotao.png" %}' alt="" style="width: 100%; height: auto;">
-                    </a>
-                    <a href="cuartointento/htmls/index.html" class="unidad-estilos" id="porfolio2">
-                        <img src="" alt="" style="width: 100%; height: auto;">
+                        <img src='{% static "imagenes/eyes/mascotaon.png" %}' alt="" style="width: 100%; height: auto;">
                     </a>
                     <a href="/space/" class="unidad-estilos" id="space">
-                        <img src='{% static "imagenes/space/alienlgo.png" %}' alt="" style="width: 100%; height: auto;">
+                        <img src='{% static "imagenes/space/alienlogo.png" %}' alt="" style="width: 100%; height: auto;">
                     </a>
+                </div>
+                <div class="columnas">
+                    <div class="unidad-estilos NoIniciada" id="proximamente4">
+                        <p>proximamente</p>
+                    </div>
                     <div class="unidad-estilos NoIniciada" id="proximamente4">
                         <p>proximamente</p>
                     </div>
                 </div>
                 <div class="columnas">
-                    <div class="unidad-estilos NoIniciada" id="proximamente5">
+                    <div class="unidad-estilos NoIniciada" id="proximamente4">
                         <p>proximamente</p>
                     </div>
-                    <div class="unidad-estilos NoIniciada" id="proximamente6">
+                    <div class="unidad-estilos NoIniciada" id="proximamente4">
                         <p>proximamente</p>
                     </div>
-                    <div class="unidad-estilos NoIniciada" id="proximamente7">
+                </div>
+                <div class="columnas">
+                    <div class="unidad-estilos NoIniciada" id="proximamente4">
                         <p>proximamente</p>
                     </div>
-                    <div class="unidad-estilos NoIniciada" id="proximamente8">
+                    <div class="unidad-estilos NoIniciada" id="proximamente4">
                         <p>proximamente</p>
                     </div>
                 </div>
             </div>
         </main>
-
         <footer>
             <div class="conteiner-contacto" id="contacto">
-                <p> Github: horacio.a </p>
-                <p> Linkedin: Horacio Albornoz </p>
-                <p> Cv: click aqui</p>
+                <a href="" class="" id="space">
+                    <img src='{% static "imagenes/space/Linkedin.png" %}' alt="" >
+                </a>              
+                <a href="" class="" id="space">
+                    <img src='{% static "imagenes/space/Github.png" %}' alt="">
+                </a>
+                <a href="" class="" id="space">
+                    <img src='{% static "imagenes/space/Cv.png" %}' alt="">
+                </a>
             </div>
         </footer>
+    </div>
     </div>
 </body>
 <script src='{% static "js/hub.js" %}'></script>
