--- a/porfolio/static/css/hub.css
+++ b/porfolio/static/css/hub.css
@@ -17,16 +17,87 @@
     font-family: chakra;
     src: url(cuartointento/fuentes/ChakraPetch-Regular.ttf);
 }
-
+body{
+    background-color: #141F26;
+    margin: 0em;
+    font-family: lemonmilk;
+}
 
 @media (min-width: 0px) and (max-width: 768px) {
 .conteiner-main{
     display: none;
 }
+.conteiner-main-movil{
+    margin: 0%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
 
-.conteiner-estilos{
+main{
+    width: 100%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+footer{
+    width: 100%;
+    height: 10%;
 
 }
+.titulo-porfolio{
+    font-size: 5vw;
+    margin-bottom: 1vh;
+}
+
+.conteiner-estilos{
+    width: 75%;
+    height: 75%;
+    background-color: #8C745E;
+    border-radius: 1.5vh;
+}
+
+.conteiner-estilos .columnas{
+    height: 25%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.unidad-estilos{
+    width: 10vh;
+    height: 10vh;
+    background-color: black;
+
+}
+
+.NoIniciada p{
+    color: white;
+    background-color: black;
+    opacity: 0%;
+}
+
+.NoIniciada:hover p{
+    animation: proximamente 0.5s ease-in-out forwards;
+}
+
+.conteiner-contacto{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+footer a {
+    height: 75%;
+}
+footer a img{
+    height: 100%;
+    width: auto;
+}
+
 
 }
 
@@ -36,11 +107,7 @@
     display: none;
 }
 
-body{
-    background-color: #141F26;
-    margin: 0em;
-    font-family: lemonmilk;
-}
+
 .conteiner-main{
     width: 100%;
     height: 100%;
@@ -122,9 +189,6 @@ footer{
     opacity: 0%;
 }
 
-.NoIniciada:hover p{
-    animation: proximamente 0.5s ease-in-out forwards;
-}
 
 
 @keyframes proximamente {
