--- a/porfolio/staticfiles/css/hub.css
+++ b/porfolio/staticfiles/css/hub.css
@@ -1,28 +1,113 @@
     @font-face {
     font-family: lemonmilk;
-    src: url(LEMONMILK-Light.otf);
+    src: url('../fuentes/LEMONMILK-Regular.otf');
 }
 
 @font-face {
     font-family: dreamscape;
-    src: url('fuentes/Dreamscape.ttf');
+    src: url('../fuentes/Dreamscape.ttf');
 }
 
 
 @font-face {
     font-family: Cinzel;
-    src: url(porfolioojos\fuentes\Cinzel-Regular.otf);
+    src: url('../fuentes/Cinzel-Regular.otf');
 }
 @font-face {
     font-family: chakra;
     src: url(cuartointento/fuentes/ChakraPetch-Regular.ttf);
 }
-
 body{
     background-color: #141F26;
     margin: 0em;
     font-family: lemonmilk;
 }
+
+@media (min-width: 0px) and (max-width: 768px) {
+.conteiner-main{
+    display: none;
+}
+.conteiner-main-movil{
+    margin: 0%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+main{
+    width: 100%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+footer{
+    width: 100%;
+    height: 10%;
+
+}
+.titulo-porfolio{
+    font-size: 5vw;
+    margin-bottom: 1vh;
+}
+
+.conteiner-estilos{
+    width: 75%;
+    height: 75%;
+    background-color: #8C745E;
+    border-radius: 1.5vh;
+}
+
+.conteiner-estilos .columnas{
+    height: 25%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.unidad-estilos{
+    width: 10vh;
+    height: 10vh;
+    background-color: black;
+
+}
+
+.NoIniciada p{
+    color: white;
+    background-color: black;
+    opacity: 0%;
+}
+
+.NoIniciada:hover p{
+    animation: proximamente 0.5s ease-in-out forwards;
+}
+
+.conteiner-contacto{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+footer a {
+    height: 75%;
+}
+footer a img{
+    height: 100%;
+    width: auto;
+}
+
+
+}
+
+@media (min-width: 769px) {
+
+.conteiner-main-movil{
+    display: none;
+}
+
+
 .conteiner-main{
     width: 100%;
     height: 100%;
@@ -104,9 +189,6 @@ footer{
     opacity: 0%;
 }
 
-.NoIniciada:hover p{
-    animation: proximamente 0.5s ease-in-out forwards;
-}
 
 
 @keyframes proximamente {
@@ -116,4 +198,5 @@ footer{
     100% {
         opacity: 100%;
     }
+}
 }
