--- a/porfolio/staticfiles/css/space.css
+++ b/porfolio/staticfiles/css/space.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: dreamscape;
-    src: url('fuentes/Dreamscape.ttf');
+    src: url('../fuentes/Dreamscape.ttf');
 }
 
 
