--- a/porfolio/template/configestilos.html
+++ b/porfolio/template/configestilos.html
@@ -108,13 +108,13 @@
         <footer>
             <div class="conteiner-contacto" id="contacto">
                 <a href="" class="" id="space">
-                    <img src='{% static "imagenes/space/Linkedin.png" %}' alt="" >
+                    <img src='{% static "imagenes/space/linkedin.png" %}' alt="" >
                 </a>              
                 <a href="" class="" id="space">
-                    <img src='{% static "imagenes/space/Github.png" %}' alt="">
+                    <img src='{% static "imagenes/space/github.png" %}' alt="">
                 </a>
                 <a href="" class="" id="space">
-                    <img src='{% static "imagenes/space/Cv.png" %}' alt="">
+                    <img src='{% static "imagenes/space/cv.png" %}' alt="">
                 </a>
             </div>
         </footer>
