ruta para estilos en eyes

--- a/porfolio/template/eyes/base.html
+++ b/porfolio/template/eyes/base.html
@@ -116,7 +116,7 @@
                 <div class="itemOpciones">
                     <a href="" class="conteiner-idioma"> En </a>
                     <a href="" class="conteiner-idioma"> Es </a>
-                    <a href="" class="conteiner-selectmodo">Cambia el estilo</a>
+                    <a href="/estilos/" class="conteiner-selectmodo">Cambia el estilo</a>
                     
                 </div>
 
