imagenes proyectos space

--- a/porfolio/template/space/proyecto.html
+++ b/porfolio/template/space/proyecto.html
@@ -13,7 +13,7 @@
                         <div class="proyecto1">
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto"> Criptoword</div>
-                                <div><img src='{% static "imagenes/space/icon s.png" %}' alt="" width="25%"></div>
+                                <div><img src='{% static "imagenes/space/icon S.png" %}' alt="" width="25%"></div>
                             </div>
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto"> Construida con</div>
@@ -105,7 +105,7 @@
                         <div class="proyecto1">
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto">calculadora</div>
-                                <div><img src='{% static "imagenes/space/calculadora.png" %}' alt="" width="25%"></div>
+                                <div><img src='{% static "imagenes/space/Calculadora.png" %}' alt="" width="25%"></div>
                             </div>
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto"> Construida con</div>
