js del hub para movil

--- a/porfolio/template/configestilos.html
+++ b/porfolio/template/configestilos.html
@@ -25,7 +25,7 @@
                     <a href="/eyes/" class="unidad-estilos" id="ojos">
                         <img src='{% static "imagenes/eyes/mascotaon.png" %}' alt="" style="width: 100%; height: auto;">
                     </a>
-                    <a href="cuartointento/htmls/index.html" class="unidad-estilos" id="porfolio2">
+                    <a href="cuartointento/htmls/index.html" class="unidad-estilos" id="proximamente3">
                         <img src="" alt="" style="width: 100%; height: auto;">
                     </a>
                     <a href="/space/" class="unidad-estilos" id="space">
@@ -67,46 +67,46 @@
 
     <div class="conteiner-main-movil">
         <main>
-            <div class="titulo-porfolio" id="titulo">
+            <div class="titulo-porfolio" id="titulo-movil">
                 Cambia el estilo del porfolio
             </div>
-            <div class="conteiner-estilos" id="conconteiner-estilos">
+            <div class="conteiner-estilos" id="conteiner-estilos-movil">
                 <div class="columnas">
-                    <a href="/eyes/" class="unidad-estilos" id="ojos">
+                    <a href="/eyes/" class="unidad-estilos" id="ojos-movil">
                         <img src='{% static "imagenes/eyes/mascotaon.png" %}' alt="" style="width: 100%; height: auto;">
                     </a>
-                    <a href="/space/" class="unidad-estilos" id="space">
+                    <a href="/space/" class="unidad-estilos" id="space-movil">
                         <img src='{% static "imagenes/space/alienlogo.png" %}' alt="" style="width: 100%; height: auto;">
                     </a>
                 </div>
                 <div class="columnas">
-                    <div class="unidad-estilos NoIniciada" id="proximamente4">
+                    <div class="unidad-estilos NoIniciada" id="proximamente3-movil">
                         <p>proximamente</p>
                     </div>
-                    <div class="unidad-estilos NoIniciada" id="proximamente4">
-                        <p>proximamente</p>
-                    </div>
-                </div>
-                <div class="columnas">
-                    <div class="unidad-estilos NoIniciada" id="proximamente4">
-                        <p>proximamente</p>
-                    </div>
-                    <div class="unidad-estilos NoIniciada" id="proximamente4">
+                    <div class="unidad-estilos NoIniciada" id="proximamente4-movil">
                         <p>proximamente</p>
                     </div>
                 </div>
                 <div class="columnas">
-                    <div class="unidad-estilos NoIniciada" id="proximamente4">
+                    <div class="unidad-estilos NoIniciada" id="proximamente5-movil">
                         <p>proximamente</p>
                     </div>
-                    <div class="unidad-estilos NoIniciada" id="proximamente4">
+                    <div class="unidad-estilos NoIniciada" id="proximamente6-movil">
+                        <p>proximamente</p>
+                    </div>
+                </div>
+                <div class="columnas">
+                    <div class="unidad-estilos NoIniciada" id="proximamente7-movil">
+                        <p>proximamente</p>
+                    </div>
+                    <div class="unidad-estilos NoIniciada" id="proximamente8-movil">
                         <p>proximamente</p>
                     </div>
                 </div>
             </div>
         </main>
         <footer>
-            <div class="conteiner-contacto" id="contacto">
+            <div class="conteiner-contacto" id="contacto-movil">
                 <a href="" class="" id="space">
                     <img src='{% static "imagenes/space/linkedin.png" %}' alt="" >
                 </a>              
