prueba error header habilidades movil eyes

--- a/porfolio/template/configestilos.html
+++ b/porfolio/template/configestilos.html
@@ -23,14 +23,14 @@
             <div class="conteiner-estilos" id="conconteiner-estilos">
                 <div class="columnas">
                     <a href="/eyes/" class="unidad-estilos" id="ojos">
-                        <img src='{% static "imagenes/eyes/mascotaon.png" %}' alt="" style="width: 100%; height: auto;">
-                    </a>
-                    <a href="cuartointento/htmls/index.html" class="unidad-estilos" id="proximamente3">
-                        <img src="" alt="" style="width: 100%; height: auto;">
+                        <img src='{% static "imagenes/eyes/mascotaon.png" %}' alt="" style="width: 100%; height: auto; border-radius: 1vh ;">
                     </a>
                     <a href="/space/" class="unidad-estilos" id="space">
                         <img src='{% static "imagenes/space/alienlogo.png" %}' alt=""
-                            style="width: 100%; height: auto;">
+                            style="width: 100%; height: auto;  border-radius: 1vh ;">
+                    </a>
+                    <a href="" class="unidad-estilos" id="proximamente3">
+                        <img src="" alt="" style="width: 100%; height: auto;">
                     </a>
                     <div class="unidad-estilos NoIniciada" id="proximamente4">
                         <p>proximamente</p>
