--- a/porfolio/template/eyes/base.html
+++ b/porfolio/template/eyes/base.html
@@ -1,14 +1,17 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
-    <title>       
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+    <link rel="icon" href='{% static "imagenes/eyes/mascotaon.png" %}'>
+    <title>
         {% block title %}
         Mi porfolio
         {% endblock %}
@@ -17,6 +20,7 @@
     <link type="text/css" rel="stylesheet" href='{% static "css/index.css" %} '>
 
 </head>
+
 <body>
     <div class="conteiner-main">
         <header id="header-pc">
@@ -117,7 +121,7 @@
                     <a href="" class="conteiner-idioma"> En </a>
                     <a href="" class="conteiner-idioma"> Es </a>
                     <a href="/estilos/" class="conteiner-selectmodo">Cambia el estilo</a>
-                    
+
                 </div>
 
             </nav>
