arreglo header habilidades y proyectos, en eyes

--- a/porfolio/static/css/index.css
+++ b/porfolio/static/css/index.css
@@ -393,7 +393,7 @@
 
     .bloque-proyecto {
         width: 100%;
-        height: 17.5vh;
+        height: 25%;
         margin-bottom: 1vh;
         display: flex;
         align-items: center;
