--- a/porfolio/template/space/base.html
+++ b/porfolio/template/space/base.html
@@ -78,6 +78,9 @@
             </pattern>
     </svg>
 </div>
+<div class="header-movil">
+    MENU
+</div>
     {% block content %}
     {% endblock %}
 </body>
