--- a/porfolio/template/space/inicio.html
+++ b/porfolio/template/space/inicio.html
@@ -59,7 +59,7 @@
                 <span>
                     <a class="menu-item" href="/space/contacto">
                         <img src='{% static "imagenes/space/Contacto.png" %}' alt="">
-            
+
                     </a>
                 </span>
             </div>
@@ -68,7 +68,7 @@
                 <span>
                     <a class="menu-item" href="/estilos">
                         <img src='{% static "imagenes/space/circulo-de-color.png" %}' alt="">
-            
+
                     </a>
                 </span>
             </div>
@@ -98,4 +98,22 @@
 
 
 </div>
+
+<div class="footer-movil">
+    <a href="">
+        <img src='{% static "imagenes/space/linkedin.png" %}' alt="" width="100%">
+    </a>
+    <a href="">
+        <img src='{% static "imagenes/space/cv.png" %}' alt="" width="85%">
+    </a>
+    <a href="">
+        <img src='{% static "imagenes/space/github.png" %}' alt="" width="100%">
+
+    </a>
+
+</div>
+
+
+</div>
+
 {% endblock %}
