--- a/porfolio/static/css/space.css
+++ b/porfolio/static/css/space.css
@@ -84,6 +84,143 @@
         align-items: center;
     }
 
+
+
+
+
+
+    .header {
+        width: 100%;
+        height: 10%;
+        z-index: 100;
+        position: relative;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: center;
+
+        color: white;
+
+    }
+
+    .a {
+        color: #EEEBDD;
+
+    }
+
+    .header .svg {
+        width: 2em;
+        height: 2em;
+        fill: #1B1717;
+    }
+
+    .item {
+        width: 100%;
+        height: 17.5%;
+        margin-bottom: 2.5%;
+        background-color: #380E64;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .itemOpciones {
+        width: 100%;
+        height: 17.5%;
+        margin-bottom: 2.5%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .item a {
+        height: 75%;
+        width: 45%;
+        background-color: #FFE02F;
+        border-radius: 1vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+        color: #1B1717;
+        font-size: 1.75vh;
+    }
+
+
+
+
+    .header .ul {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: flex-end;
+        align-items: center;
+
+    }
+
+    .header .li {
+        margin: 0 .5em;
+        background-color: #380E64;
+        width: 100%;
+    }
+
+    .header .button {
+        font-family: dreamscape;
+        width: 100%;
+        height: 100%;
+        display: block;
+        cursor: pointer;
+        border: none;
+        background: none;
+        color: #FFE02F;
+        font-size: 2.5vh;
+        border-radius: .5vh;
+        margin-bottom: 1vh;
+    }
+
+
+    .header .button.activo {
+        background-color:  #5F328B;
+        margin-bottom: 0vh;
+    }
+
+    .header .nav {
+        width: 100%;
+        /* display: none; */
+        height: 0;
+        pointer-events: none;
+        overflow: hidden;
+        transition: all .5s ease;
+
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .header .nav.activo {
+        background-color: #5F328B;
+        display: block;
+        height: 40vh;
+        pointer-events: auto;
+    }
+
+    .header .ul {
+        flex-direction: column;
+    }
+
+    .header .li {
+        margin: 1rem 0;
+    }
+
+
+
+
+
+
+
+
+
+
+
     .footer {
         display: none;
     }
@@ -124,7 +261,7 @@
 }
 
 @media (min-width: 769px) {
-    .header-movil {
+    #header-movil {
         display: none;
     }
 
