header del respovise movil de space 2.0

--- a/porfolio/template/space/base.html
+++ b/porfolio/template/space/base.html
@@ -88,6 +88,11 @@
 
         <nav class="nav" id="nav">
             <div class="item">
+                <a href="/space" class="a">
+                    <p>Inicio</p>
+                </a>
+            </div>
+            <div class="item">
                 <a href="/space/quiensoy" class="a">
                     <p>Quien soy</p>
                 </a>
@@ -108,9 +113,9 @@
                 </a>
             </div>
             <div class="itemOpciones">
-                <a href="" class="conteiner-idioma"> En </a>
-                <a href="" class="conteiner-idioma"> Es </a>
                 <a href="/estilos/" class="conteiner-selectmodo">Cambia el estilo</a>
+
+                <a href="/estilos/" class="conteiner-selectmodo">Change to English</a>
 
             </div>
 
