--- a/porfolio/static/css/space.css
+++ b/porfolio/static/css/space.css
@@ -116,21 +116,14 @@
 
     .item {
         width: 100%;
-        height: 17.5%;
-        margin-bottom: 2.5%;
+        height: 15%;
+        margin-bottom: 1.75%;
         background-color: #380E64;
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    .itemOpciones {
-        width: 100%;
-        height: 17.5%;
-        margin-bottom: 2.5%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+
 
     .item a {
         height: 75%;
@@ -143,6 +136,30 @@
         text-decoration: none;
         color: #1B1717;
         font-size: 1.75vh;
+    }
+
+    .itemOpciones {
+        width: 100%;
+        height: 15%;
+        margin-bottom: 1.75%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+
+    .itemOpciones a{
+        font-size:  1.75vh;
+        width: 35%;
+        height: 75%;
+        background-color: #FFE02F;
+        border-radius: 1vh;
+        color: #1B1717;
+        text-decoration: none;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
 
@@ -184,12 +201,10 @@
 
     .header .nav {
         width: 100%;
-        /* display: none; */
         height: 0;
         pointer-events: none;
         overflow: hidden;
         transition: all .5s ease;
-
         display: flex;
         flex-flow: column nowrap;
         justify-content: center;
