pagina como soy resposive

--- a/porfolio/template/space/quiensoy.html
+++ b/porfolio/template/space/quiensoy.html
@@ -7,6 +7,7 @@
 {% block content %}
 <div class="main-inicio">
     <div class="main-quiensoy">
+        <div class="quiensoy-titulo-movil">Como Soy</div>
         <div class="conteiner-quiensoy">
             <div class="quiensoy-titulo">Como Soy</div>
             <p>Soy Horacio Albornoz un programador, altamente proactivo con ganas de aprender cosas nuevas, siempre 100%
@@ -125,6 +126,20 @@
 
     </div>
 
+</div>
+
+
+<div class="footer-movil">
+    <a href="">
+        <img src='{% static "imagenes/space/linkedin.png" %}' alt="" width="100%">
+    </a>
+    <a href="">
+        <img src='{% static "imagenes/space/cv.png" %}' alt="" width="85%">
+    </a>
+    <a href="">
+        <img src='{% static "imagenes/space/github.png" %}' alt="" width="100%">
+
+    </a>
 
 </div>
 {% endblock %}
