--- a/porfolio/static/css/space.css
+++ b/porfolio/static/css/space.css
@@ -6,7 +6,7 @@
 
 
 
-@media (min-width: 0px) and (max-width: 768px) {
+@media (min-width: 0px) and (max-width: 900px) {
     body {
         cursor: none;
         overflow: hidden;
@@ -32,7 +32,7 @@
         top: -5%;
         left: 60%;
         width: 17vh;
-    
+
     }
 
     .planeta {
@@ -148,8 +148,8 @@
     }
 
 
-    .itemOpciones a{
-        font-size:  1.75vh;
+    .itemOpciones a {
+        font-size: 1.75vh;
         width: 35%;
         height: 75%;
         background-color: #FFE02F;
@@ -195,7 +195,7 @@
 
 
     .header .button.activo {
-        background-color:  #5F328B;
+        background-color: #5F328B;
         margin-bottom: 0vh;
     }
 
@@ -248,34 +248,86 @@
         justify-content: space-evenly;
         align-items: center;
     }
+
     .footer-movil a {
         display: flex;
         justify-content: center;
         align-items: center;
         background-color: #5F328B;
-        border-radius: 50% ;
+        border-radius: 50%;
         height: 7.5vh;
         width: 7.5vh;
     }
-    .footer-movil a img{
+
+    .footer-movil a img {
         height: 65%;
         width: auto;
     }
 
-    .main-nombre p{
+    .main-nombre p {
         margin: 0%;
         color: #BFE4F8;
         margin-top: 1vh;
         font-size: 6.75vh;
     }
-    .epilogo{
+
+    .epilogo {
         color: #FFE02F;
         font-size: 2.5vh;
     }
 
+    /* /////////////////////////// Quien soy movil  //////////////////////////////// */
+
+
+    .main-quiensoy {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+
+    #reflector_quiensoy {
+        width: 20.6vh;
+        height: 19.5vh;
+    }
+
+    .conteiner-quiensoy {
+        border-radius: 1vh;
+        padding: 1vh;
+        width: 75%;
+        height: auto;
+        background-color: #5F318B;
+        color: #BFE4F8;
+    }
+    .conteiner-quiensoy p {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2vh;
+        text-align: center;
+
+    }
+
+    .quiensoy-titulo {
+        display: none;
+    }
+
+    .quiensoy-titulo-movil {
+        color: #BFE4F8;
+        font-size: 3.75vh;
+        margin-bottom: 1vh;
+    }
+
+    /* ///////////////////////////  Quien soy movil //////////////////////////////// */
+
+
+
+
+
 }
 
-@media (min-width: 769px) {
+@media (min-width: 901px) {
     #header-movil {
         display: none;
     }
@@ -633,6 +685,16 @@
 
 
     /* /////////////////////////// quien soy //////////////////////////////// */
+    #reflector_quiensoy {
+        margin-left: 20%;
+        margin-top: 2%;
+        width: 20.6vh;
+        height: 19.5vh;
+    }
+
+    .quiensoy-titulo-movil {
+        display: none;
+    }
 
     .main-inicio .main-quiensoy {
         display: flex;
@@ -829,12 +891,7 @@
         color: white;
     }
 
-    #reflector_quiensoy {
-        margin-left: 20%;
-        margin-top: 5%;
 
-
-    }
 
 
     /* /////////////////////////// Habilidades //////////////////////////////// */
