--- a/porfolio/template/space/contacto.html
+++ b/porfolio/template/space/contacto.html
@@ -126,4 +126,19 @@
 
 
 </div>
+
+
+<div class="footer-movil">
+    <a href="">
+        <img src='{% static "imagenes/space/linkedin.png" %}' alt="" width="100%">
+    </a>
+    <a href="">
+        <img src='{% static "imagenes/space/cv.png" %}' alt="" width="85%">
+    </a>
+    <a href="">
+        <img src='{% static "imagenes/space/github.png" %}' alt="" width="100%">
+
+    </a>
+
+</div>
 {% endblock %}
