pagina habilidades space resposive movil

--- a/porfolio/template/space/habilidades.html
+++ b/porfolio/template/space/habilidades.html
@@ -10,61 +10,112 @@
         <div class="conteudo">
             <div class="icon-habilidades">
                 <span class="tooltip">HTML</span>
-                <span><img class="imagane-icon-habilidades html" src='{% static "imagenes/space/ic-html.png" %}' height="1.5vh"></span>
+                <span><img class="imagane-icon-habilidades html" src='{% static "imagenes/space/ic-html.png" %}'
+                        height="1.5vh"></span>
             </div>
             <div class="icon-habilidades">
                 <span class="tooltip">CSS</span>
-                <span><img class="imagane-icon-habilidades css" src='{% static "imagenes/space/ic-css.png" %}' height="50%"></span>
+                <span><img class="imagane-icon-habilidades css" src='{% static "imagenes/space/ic-css.png" %}'
+                        height="50%"></span>
             </div>
             <div class="icon-habilidades">
                 <span class="tooltip">bootstrap</span>
-                <span><img class="imagane-icon-habilidades js" src='{% static "imagenes/space/bootstrap.png" %}' height="50%"></span>
+                <span><img class="imagane-icon-habilidades js" src='{% static "imagenes/space/bootstrap.png" %}'
+                        height="50%"></span>
             </div>
             <div class="icon-habilidades">
                 <span class="tooltip">JavaScript</span>
-                <span><img class="imagane-icon-habilidades bootstrap" src='{% static "imagenes/space/ic-js.png" %}' height="50%"></span>
+                <span><img class="imagane-icon-habilidades bootstrap" src='{% static "imagenes/space/ic-js.png" %}'
+                        height="50%"></span>
             </div>
             <div class="icon-habilidades">
                 <span class="tooltip">GIT</span>
-                <span><img class="imagane-icon-habilidades git" src='{% static "imagenes/space/ic-git.png" %}' height="50%"></span>
+                <span><img class="imagane-icon-habilidades git" src='{% static "imagenes/space/ic-git.png" %}'
+                        height="50%"></span>
             </div>
             <div class="icon-habilidades">
                 <span class="tooltip">REACT.JS</span>
-                <span><img class="imagane-icon-habilidades react" src='{% static "imagenes/space/ic-react.png" %}' height="50%"></span>
+                <span><img class="imagane-icon-habilidades react" src='{% static "imagenes/space/ic-react.png" %}'
+                        height="50%"></span>
             </div>
             <div class="icon-habilidades">
                 <span class="tooltip">nODE.JS</span>
-                <span><img class="imagane-icon-habilidades nodejs" src='{% static "imagenes/space/nodejs.png" %}' ></span>
+                <span><img class="imagane-icon-habilidades nodejs"
+                        src='{% static "imagenes/space/nodejs.png" %}'></span>
             </div>
             <div class="icon-habilidades">
                 <span class="tooltip">PYTHON</span>
-                <span><img class="imagane-icon-habilidades python" src='{% static "imagenes/space/python.png" %}' height="50%"></span>
+                <span><img class="imagane-icon-habilidades python" src='{% static "imagenes/space/python.png" %}'
+                        height="50%"></span>
             </div>
             <div class="icon-habilidades">
                 <span class="tooltip">DJANGO</span>
-                <span><img class="imagane-icon-habilidades django" src='{% static "imagenes/space/django.jpg" %}' height="50%"></span>
+                <span><img class="imagane-icon-habilidades django" src='{% static "imagenes/space/django.jpg" %}'
+                        height="50%"></span>
             </div>
 
         </div>
         <svg id="reflector_quiensoy" width="223" height="215" viewBox="0 0 223 215" fill="none"
-        xmlns="http://www.w3.org/2000/svg">
-        <g id="Group 37">
-            <path id="Vector 19"
-                d="M96.5685 151.751L0 0H111.5H223L167.25 87.6071L126.431 151.751C119.477 162.679 103.523 162.679 96.5685 151.751Z"
-                fill="url(#paint0_linear_41_2)" />
-            <path id="Rectangle 14"
-                d="M37 200C37 186.193 48.1929 175 62 175H162C175.807 175 187 186.193 187 200V215H37V200Z"
-                fill="#1E1E1E" />
-        </g>
-        <defs>
-            <linearGradient id="paint0_linear_41_2" x1="112" y1="-1.1486e-08" x2="111.5" y2="175.214"
-                gradientUnits="userSpaceOnUse">
-                <stop stop-color="#380E64" />
-                <stop offset="0.766752" stop-color="#FFE02F" />
-            </linearGradient>
-        </defs>
-    </svg>
+            xmlns="http://www.w3.org/2000/svg">
+            <g id="Group 37">
+                <path id="Vector 19"
+                    d="M96.5685 151.751L0 0H111.5H223L167.25 87.6071L126.431 151.751C119.477 162.679 103.523 162.679 96.5685 151.751Z"
+                    fill="url(#paint0_linear_41_2)" />
+                <path id="Rectangle 14"
+                    d="M37 200C37 186.193 48.1929 175 62 175H162C175.807 175 187 186.193 187 200V215H37V200Z"
+                    fill="#1E1E1E" />
+            </g>
+            <defs>
+                <linearGradient id="paint0_linear_41_2" x1="112" y1="-1.1486e-08" x2="111.5" y2="175.214"
+                    gradientUnits="userSpaceOnUse">
+                    <stop stop-color="#380E64" />
+                    <stop offset="0.766752" stop-color="#FFE02F" />
+                </linearGradient>
+            </defs>
+        </svg>
     </div>
+    <div class="main-habilidades-movil">
+        <div class="conteudo">
+            <div class="row">
+                <img class="imagane-icon-habilidades html" src='{% static "imagenes/space/ic-html.png" %}'>
+                <img class="imagane-icon-habilidades css" src='{% static "imagenes/space/ic-css.png" %}'>
+            </div>
+            <div class="row">
+
+                <img class="imagane-icon-habilidades bootstrap" src='{% static "imagenes/space/ic-js.png" %}'>
+                <img class="imagane-icon-habilidades git" src='{% static "imagenes/space/ic-git.png" %}'>
+            </div>
+            <div class="row">
+
+                <img class="imagane-icon-habilidades react" src='{% static "imagenes/space/ic-react.png" %}'>
+                <img class="imagane-icon-habilidades nodejs" src='{% static "imagenes/space/nodejs.png" %}'>
+            </div>
+            <div class="row">
+
+                <img class="imagane-icon-habilidades python" src='{% static "imagenes/space/python.png" %}'>
+                <img class="imagane-icon-habilidades django" src='{% static "imagenes/space/django.jpg" %}'>
+            </div>
+        </div>
+        <svg id="reflector_quiensoy" width="223" height="215" viewBox="0 0 223 215" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <g id="Group 37">
+                <path id="Vector 19"
+                    d="M96.5685 151.751L0 0H111.5H223L167.25 87.6071L126.431 151.751C119.477 162.679 103.523 162.679 96.5685 151.751Z"
+                    fill="url(#paint0_linear_41_2)" />
+                <path id="Rectangle 14"
+                    d="M37 200C37 186.193 48.1929 175 62 175H162C175.807 175 187 186.193 187 200V215H37V200Z"
+                    fill="#1E1E1E" />
+            </g>
+            <defs>
+                <linearGradient id="paint0_linear_41_2" x1="112" y1="-1.1486e-08" x2="111.5" y2="175.214"
+                    gradientUnits="userSpaceOnUse">
+                    <stop stop-color="#380E64" />
+                    <stop offset="0.766752" stop-color="#FFE02F" />
+                </linearGradient>
+            </defs>
+        </svg>
+    </div>
+
     <div class="main-menu">
         <div class="wrapper-row">
             <div class="icon fabebook">
@@ -149,6 +200,20 @@
 
     </div>
 
+
+</div>
+
+<div class="footer-movil">
+    <a href="">
+        <img src='{% static "imagenes/space/linkedin.png" %}' alt="" width="100%">
+    </a>
+    <a href="">
+        <img src='{% static "imagenes/space/cv.png" %}' alt="" width="85%">
+    </a>
+    <a href="">
+        <img src='{% static "imagenes/space/github.png" %}' alt="" width="100%">
+
+    </a>
 
 </div>
 {% endblock %}
