--- a/porfolio/static/css/space.css
+++ b/porfolio/static/css/space.css
@@ -321,6 +321,52 @@
 
     /* ///////////////////////////  Quien soy movil //////////////////////////////// */
 
+
+
+
+    /* ///////////////////////////  habilidades movil //////////////////////////////// */
+
+
+    .main-habilidades{
+        display: none;
+    }
+    .main-habilidades-movil{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .conteudo{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #5F318B;
+        border-radius: 1vh;
+        width: 75%;
+    }
+    .conteudo .row{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        height: 25%;
+    }
+
+    .conteudo img{
+        width: 25%;
+        margin: 5%;
+    }
+
+
+    /* ///////////////////////////  habilidades movil //////////////////////////////// */
+
+
+
+
+
     /* ///////////////////////////  contacto movil //////////////////////////////// */
 
     .conteinerContacto form {
@@ -813,7 +859,9 @@
 
 
     /* /////////////////////////// Habilidades //////////////////////////////// */
-
+    .main-habilidades-movil{
+        display: none;
+    }
     .main-habilidades {
         display: flex;
         flex-direction: column;
