--- a/porfolio/static/css/index.css
+++ b/porfolio/static/css/index.css
@@ -591,6 +591,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        height: 100%;
     }
 
     .boton-movil-contacto{
@@ -615,7 +616,7 @@
         width: 75%;
         margin-bottom: 1vh;
         padding: 10px;
-        height: 5vh;
+        height: 20%;
     }
 
     .form-movil {
@@ -624,7 +625,7 @@
         border-radius: 1vh;
         border: none;
         width: 75%;
-        height: 3vh;
+        height: 10%;
         margin-bottom: 1vh;
         padding: 10px;
     }
@@ -635,7 +636,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-    
+        height: 75%;
     }
 
     /* -----------------------------------  fin main-contacto -------------------------------------------- */
