--- a/porfolio/static/css/space.css
+++ b/porfolio/static/css/space.css
@@ -321,6 +321,146 @@
 
     /* ///////////////////////////  Quien soy movil //////////////////////////////// */
 
+    /* /////////////////////////// Proyectos movil  //////////////////////////////// */
+
+    .main-proyecto{ 
+        display: none;
+    }
+    .main-proyecto-movil{ 
+        width: 100%;
+        height: 100%;
+
+    }
+    .section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        width: 100%;
+
+    }
+
+    .slider {
+        position: relative;
+        width: 100%;
+        height: 80%;
+        text-align: center;
+    }
+
+    .slider-slides {
+        position: relative;
+        height: 100%;
+    }
+
+    .proyecto1 {
+        width: 80%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #5F328B;
+        border-radius: 1vh;
+    }
+
+
+    .slider-slide-movil {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 1s ease;
+    }
+
+    .slider-slide-movil.active {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .slider-btns {
+        position: absolute;
+        width: 100%;
+        top: calc(50% - 2rem);
+        display: flex;
+        justify-content: space-between;
+        font-size: 3rem;
+        font-weight: bold;
+        color: white;
+
+    }
+
+    .prev,
+    .next {
+        font-size: 10vh;
+        font-weight: 100;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .titulo-proyecto {
+        font-size: 3.85vh;
+        color: #BFE4F8;
+        margin-bottom: 2.5vh;
+    }
+
+    .tecnologias-construccion {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-bottom: 2vh;
+        width: 100%;
+        height: 30%;
+
+    }
+
+
+    .tecnologias-construccion img{
+        height:  100%;
+
+    }
+
+    .conteiner-main-proyecto {
+        width: 100%;
+        height: 33%;
+    }
+
+    .conteiner-main-proyecto.links {
+        width: 100%;
+        height: 25%;
+    }
+
+
+    .conteiner-button-proyecto {
+        width: 100%;
+        height: 50%;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .button-proyecto {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #FFE02F;
+        width: 23vh;
+        height: 5.1vh;
+        border-radius: .5vh;
+        margin-left: 1vh;
+    }
+
+
+
+
+    /* /////////////////////////// Proyectos movil  //////////////////////////////// */
 
 
 
@@ -1019,7 +1159,17 @@
 
 
     /* /////////////////////////// proyecto //////////////////////////////// */
-
+    .main-proyecto-movil{ 
+        display: none;
+    }
+    .main-proyecto{
+            width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    }
 
     .section {
         display: flex;
