--- a/porfolio/template/space/proyecto.html
+++ b/porfolio/template/space/proyecto.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="main-inicio">
-    <div class="main-nombre">
+    <div class="main-proyecto">
         <section id="seccion12" class="section">
             <div class="slider">
                 <div class="slider-slides">
@@ -147,6 +147,119 @@
             </div>
         </section>
     </div>
+    <div class="main-proyecto-movil">
+        <section id="seccion12" class="section">
+            <img class="next-movil button-carrosel" src='{% static "imagenes/space/arriba.png" %}' height="25vh"></img>
+
+            <div class="slider">
+                <div class="slider-slides">
+                    <div class="slider-slide-movil active">
+                        <div class="proyecto1">
+                            <div class="conteiner-main-proyecto">
+                                <div class="titulo-proyecto"> Criptoword</div>
+                                <div><img src='{% static "imagenes/space/icon S.png" %}' alt="" width="25%"></div>
+                            </div>
+                            <div class="conteiner-main-proyecto">
+                                <div class="titulo-proyecto"> Construida con</div>
+                                <div class="tecnologias-construccion">
+                                    <img class="imagane-icon-habilidades html"
+                                        src='{% static "imagenes/space/ic-html.png" %}' >
+                                    <img class="imagane-icon-habilidades css"
+                                        src='{% static "imagenes/space/ic-css.png" %}' >
+                                    <img class="imagane-icon-habilidades bootstrap"
+                                        src='{% static "imagenes/space/ic-js.png" %}' >
+                                </div>
+
+                                <div class="tecnologias-construccion">
+                                    <img class="imagane-icon-habilidades react"
+                                        src='{% static "imagenes/space/ic-react.png" %}'>
+                                    <img class="imagane-icon-habilidades nodejs"
+                                        src='{% static "imagenes/space/nodejs.png" %}' >
+                                </div>
+
+
+                            </div>
+                            <div class="conteiner-main-proyecto links">
+                                <div class="titulo-proyecto">Links</div>
+                                <div class="conteiner-button-proyecto">
+                                    <a class="button-proyecto">Link a github</a>
+                                    <a class="button-proyecto">Link a la web</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider-slide-movil">
+                        <div class="proyecto1">
+                            <div class="conteiner-main-proyecto">
+                                <div class="titulo-proyecto">Espacio bonhomia</div>
+                                <div><img src='{% static "imagenes/space/BonhomiaLogo.png" %}' alt="" width="25%"></div>
+                            </div>
+                            <div class="conteiner-main-proyecto">
+                                <div class="titulo-proyecto"> Construida con</div>
+                                <div class="tecnologias-construccion">
+                                    <img class="imagane-icon-habilidades html"
+                                        src='{% static "imagenes/space/ic-html.png" %}' >
+                                    <img class="imagane-icon-habilidades css"
+                                        src='{% static "imagenes/space/ic-css.png" %}' >
+                                    <img class="imagane-icon-habilidades bootstrap"
+                                        src='{% static "imagenes/space/ic-js.png" %}' >
+                                </div>
+
+                                <div class="tecnologias-construccion">
+
+                                    <img class="imagane-icon-habilidades python"
+                                        src='{% static "imagenes/space/python.png" %}' >
+                                    <img class="imagane-icon-habilidades django"
+                                        src='{% static "imagenes/space/django.jpg" %}' >
+
+                                </div>
+                            </div>
+                            <div class="conteiner-main-proyecto links">
+                                <div class="titulo-proyecto">Links</div>
+                                <div class="conteiner-button-proyecto">
+                                    <a class="button-proyecto">Link a github</a>
+                                    <a class="button-proyecto">Link a la web</a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="slider-slide-movil">
+                        <div class="proyecto1">
+                            <div class="conteiner-main-proyecto">
+                                <div class="titulo-proyecto">calculadora</div>
+                                <div><img src='{% static "imagenes/space/Calculadora.png" %}' alt="" width="25%"></div>
+                            </div>
+                            <div class="conteiner-main-proyecto">
+                                <div class="titulo-proyecto"> Construida con</div>
+                                <div class="tecnologias-construccion">
+                                    <img class="imagane-icon-habilidades html"
+                                        src='{% static "imagenes/space/ic-html.png" %}' >
+                                    <img class="imagane-icon-habilidades bootstrap"
+                                        src='{% static "imagenes/space/ic-js.png" %}' >
+                                    <img class="imagane-icon-habilidades css"
+                                        src='{% static "imagenes/space/ic-css.png" %}'>
+                                </div>
+                            </div>
+                            <div class="conteiner-main-proyecto links">
+                                <div class="titulo-proyecto">Links</div>
+                                <div class="conteiner-button-proyecto">
+                                    <a class="button-proyecto">Link a github</a>
+                                    <a class="button-proyecto">Link a la web</a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <img class="prev-movil button-carrosel" src='{% static "imagenes/space/abajo.png" %}' height="25vh" ></img>
+
+        </section>
+
+    </div>
+
     <div class="main-menu">
         <div class="wrapper-row">
             <div class="icon fabebook">
