--- a/porfolio/template/space/proyecto.html
+++ b/porfolio/template/space/proyecto.html
@@ -155,7 +155,7 @@
                 <div class="slider-slides">
                     <div class="slider-slide-movil active">
                         <div class="proyecto1">
-                            <div class="conteiner-main-proyecto">
+                            <div class="conteiner-main-proyecto" style="margin-top: 1vh;">
                                 <div class="titulo-proyecto"> Criptoword</div>
                                 <div><img src='{% static "imagenes/space/icon S.png" %}' alt="" width="25%"></div>
                             </div>
@@ -190,7 +190,7 @@
                     </div>
                     <div class="slider-slide-movil">
                         <div class="proyecto1">
-                            <div class="conteiner-main-proyecto">
+                            <div class="conteiner-main-proyecto" style="margin-top: 1vh;">
                                 <div class="titulo-proyecto">Espacio bonhomia</div>
                                 <div><img src='{% static "imagenes/space/BonhomiaLogo.png" %}' alt="" width="25%"></div>
                             </div>
@@ -226,7 +226,7 @@
                     </div>
                     <div class="slider-slide-movil">
                         <div class="proyecto1">
-                            <div class="conteiner-main-proyecto">
+                            <div class="conteiner-main-proyecto" style="margin-top: 1vh;">
                                 <div class="titulo-proyecto">calculadora</div>
                                 <div><img src='{% static "imagenes/space/Calculadora.png" %}' alt="" width="25%"></div>
                             </div>
