--- a/porfolio/template/404.html
+++ b/porfolio/template/404.html
@@ -1,1 +1,33 @@
-hola    
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href='{% static "css/error.css" %}'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <title>Document</title>
+</head>
+
+<body>
+    <main>
+        <p class="error">Error 404</p>
+        <p class="lost">Creo que estas perdido</p>
+    </main>
+    <footer>
+        <p>Si quieres volver al </p>
+        <div class="conteiner-a">
+             <p>porfolio hace click</p>
+            <a href="/">aqui</a>
+        </div>
+       
+
+    </footer>
+</body>
+
+</html>
