--- a/porfolio/template/404.html
+++ b/porfolio/template/404.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href='{% static "css/error.css" %}'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href='{% static "imagenes/error.png" %}'>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
