--- a/porfolio/template/space/inicio.html
+++ b/porfolio/template/space/inicio.html
@@ -9,6 +9,7 @@
     <div class="main-nombre">
         <p>Horacio</p>
         <p>Albornoz</p>
+        <p id="SpanID"></p>
         <div class="epilogo">desarrollador full stack</div>
     </div>
     <div class="main-menu">
