--- a/porfolio/static/css/space.css
+++ b/porfolio/static/css/space.css
@@ -6,7 +6,7 @@
 
 
 
-@media (min-width: 0px) and (max-width: 1199px) {
+@media (min-width: 0px) and (max-width: 950px) {
     body {
         cursor: none;
         overflow: hidden;
@@ -587,6 +587,8 @@
 
 
 
+@media (min-width: 951px) and (max-width: 1199px) {
+}
 
 
 
